--- a/templates/Lawyer/CaseHistory.html
+++ b/templates/Lawyer/CaseHistory.html
@@ -213,7 +213,7 @@
                                  <div class="card-content">
                                      <h4 class="card-title">Hearings</h4>
                                      <div class="row">
-                                         <div class="col-md-10">
+                                         <div class="col-md-12">
                                              <div class="table-responsive table-sales">
                                                  <table class="table">
                                                      <tbody class="text-center">
@@ -227,7 +227,7 @@
                                                          <tr>
                                                              <td>{{hr.Date}}</td>
                                                              <td>{{hr.CNRno}}</td>
-                                                             <td>{{hr.Prev_Date}}</td>
+                                                             <td>{{hr.Prev_date}}</td>
                                                              <td>{{hr.Purpose}}</td>
                                                          </tr>
                                                          {%endfor%}
