--- a/templates/Lawyer/ClientRequests.html
+++ b/templates/Lawyer/ClientRequests.html
@@ -44,6 +44,23 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        var myVar = setInterval(myTimer, 1000);
+
+        function myTimer() 
+        {
+            var d=document.getElementById('success-msg');
+            console.log(d);
+            if (d!=null)
+            {
+                swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"});
+                clearInterval(myVar);
+            }
+        }
+        
+    </script>
 </head>
 
 <body>
@@ -213,7 +230,7 @@
                                  <div class="card-content">
                                      <h4 class="card-title">New Client Requests</h4>
                                      <div class="row">
-                                         <div class="col-md-10">
+                                         <div class="col-md-12">
                                              <div class="table-responsive table-sales">
                                                  <table class="table">
                                                      <tbody class="text-center">
@@ -223,7 +240,6 @@
                                                                 <td>Filing No</td>
                                                                 <td>Client Note</td>
                                                                 <td>Quotation</td>
-                                                                <td>Status</td>
                                                                 <td>Accept/Reject</td>
                                                             </tr>
                                                             {% for cl in clientRequests %}
@@ -233,7 +249,6 @@
                                                                 <td>{{cl.FilingNo}}</td>
                                                                 <td>{{cl.Client_Note}}</td>
                                                                 <td>{{cl.Quotation}}</td>
-                                                                <td>{{cl.Status}}</td>
                                                                 <td>
                                                                     <a href="/Lawyer/FileCase" class="btn btn-success">Accept</a>
                                                                     <form action="/Lawyer/RejectCase" method="POST">
@@ -259,8 +274,13 @@
                              </div>
                          </div>
                      </div>
-                     {%endif%}
+                {%endif%}
                      
+                {% if message=="SUCCESS" %}
+                <div id="success-msg"></div>
+                {% endif %}
+            </div>
+            </div>
                 
                 
 
