--- a/templates/Lawyer/FileCase.html
+++ b/templates/Lawyer/FileCase.html
@@ -44,6 +44,23 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        var myVar = setInterval(myTimer, 1000);
+
+        function myTimer() 
+        {
+            var d=document.getElementById('success-msg');
+            //console.log(d);
+            if (d!=null)
+            {
+                swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"});
+                clearInterval(myVar);
+            }
+        }
+    </script>
+    
 </head>
 
 <body>
@@ -167,7 +184,19 @@
                                     <div class="row">
                                         <form id="TypeValidation" class="form-horizontal" action="/Lawyer/FileCase" method="POST">
                                 
-                                            
+                                            <div class="col-sm-8">
+                                                <div class="row"> 
+                                                    <div class="form-group label-floating">
+                                                        <div class="togglebutton">
+                                                            <label>
+                                                                Civil &nbsp;
+                                                                <input type="checkbox" class="togglebutton" name="Type" id="case-type" unchecked>
+                                                                Criminal
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                             
                                             <div class="col-sm-8">
                                                 <div class="row"> 
@@ -193,17 +222,7 @@
                                                 </div>
                                             </div>
                                             
-                                            <div class="col-sm-8">
-                                                <div class="row"> 
-                                                    <div class="form-group label-floating">
-                                                        <div class="togglebutton">
-                                                            <label>
-                                                                <input type="checkbox" class="togglebutton" name="Type" id="case-type" unchecked> Civil or Criminal
-                                                            </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            
 
                                             <div class="col-sm-8" hidden="true" id="f-no">
                                                 <div class="row"> 
@@ -228,11 +247,14 @@
                             </div>
                         </div>
                     </div>
-                    <h3>{{message}}</h3>
+                    {% if message=="SUCCESS" %}
+                    <div id="success-msg"></div>                   
+                    {% endif %}
                 </div>
             </div>
         
                      
+            
  
                  
                 
